force-app/main/default/objects/Ham_Home_Page_Child__mdt/Ham_Home_Page_Child__mdt.object-meta.xml
<CustomObject>
    <description>This is a child object of Ham_Home_Page_Component_Config__mdt</description>
    <label>Ham Home Page Child</label>
    <pluralLabel>Ham Home Page Child</pluralLabel>
</CustomObject>