force-app/main/default/objects/Ham_Home_Page_Child__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Used to sort fields for the LWC iteration.</description>
    <inlineHelpText>Used to sort fields for the LWC iteration.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>