force-app/main/default/objects/Ham_Home_Page_Child__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The actual field to fetch (e.g., Total_Pledged__c)</description>
    <inlineHelpText>The actual field to fetch (e.g., Total_Pledged__c)</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>