force-app/main/default/objects/Ham_Home_Page_Child__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>The label shown in the LWC (e.g., &quot;Image Title&quot;).</description>
    <inlineHelpText>The label shown in the LWC (e.g., &quot;Image Title&quot;).</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>