force-app/main/default/objects/Ham_Home_Page_Child__mdt/fields/Field_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Field_Purpose__c</fullName>
    <description>Critical for Apex logic mapping.</description>
    <inlineHelpText>Critical for Apex logic mapping. Always add purpose to identify type of this field</inlineHelpText>
    <label>Field Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goal</fullName>
                <default>true</default>
                <label>Goal</label>
            </value>
            <value>
                <fullName>Raised</fullName>
            </value>
            <value>
                <fullName>Start Date</fullName>
            </value>
            <value>
                <fullName>End Date</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>LocationType</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>