force-app/main/default/objects/Ham_Home_Page_Child__mdt/fields/Ham_Home_Page_Component_Config__c.field-meta.xml
<CustomField>
    <fullName>Ham_Home_Page_Component_Config__c</fullName>
    <description>Links to the parent Ham Home Page Component Config</description>
    <label>Ham Home Page Component Config</label>
    <referenceTo>Ham_Home_Page_Component_Config__mdt</referenceTo>
    <relationshipLabel>Ham Home Page Child</relationshipLabel>
    <relationshipName>Ham_Home_Page_Child</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>